# test-class_loader

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  MapBase.h  MapClass.cpp  base.h  plugins1.cpp  test.cpp
